<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MiKiShutDown</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="shutdom">关机计时 :</string>
	<string name="time">请输入数字</string>
	<string name="sec">秒</string>
	<string name="shutdownNuTv">关机次数 : </string>
	<string name="shutdownNuEt">请输入数字</string>
	<string name="number">次</string>
	<string name="ShutdownCountdownTv">关机倒计时 :</string>
	<string name="shutDownBt">关   机</string>
	<string name="resetting">重   置</string>
	<string name="cancel">取   消</string>
	<string name="numbertv">已关机：</string>
	<string name="LCDtv">LCD ID:</string>
	<string name="etLCD">输入LCD ID</string>
	
</resources>
